--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -35,9 +35,7 @@ spec:
           osd_class_update_on_start: "false" # quote
           device_failure_prediction_mode: local # requires mgr module
         mon:
-          mon_cluster_log_file_level: "info"
-          # TODO: replace mon_cluster_log_file_level with mon_cluster_log_level in next ceph release
-          # mon_cluster_log_level: "info"
+          mon_cluster_log_level: "info"
       cleanupPolicy:
         wipeDevicesFromOtherClusters: true
       dashboard:
