--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
       tqm:
         type: cronjob
         cronjob: &cronJobSpec
-          schedule: 0 * * * *
+          schedule: 0/5 * * * *
           backoffLimit: 0
           concurrencyPolicy: Forbid
           successfulJobsHistory: 1
@@ -70,7 +70,6 @@ spec:
         cronjob:
           <<: *cronJobSpec
           schedule: 0 0 * * 0
-          suspend: true
         containers:
           app:
             <<: *container
