--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -97,6 +97,17 @@ spec:
                       values:
                         - "true"
 
+    route:
+      dashboard:
+        host:
+          name: rook.nasenov.dev
+          path: /
+          pathType: PathPrefix
+        parentRefs:
+          - name: internal
+            namespace: kube-system
+            sectionName: https
+
     cephBlockPools:
       - name: ceph-blockpool
         spec:
